# read-process-embedder

./: .gitignore  README.md  pyproject.toml
notebooks/: train_set_encoder.ipynb
src/read_process_embedder/: __init__.py  datasets.py  model.py  models.py
