[project]
name = "read-process-embedder"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "jaxtyping>=0.3.0",
    "lightning>=2.5.1",
    "torchrl>=0.7.2",
    "wandb>=0.19.8",
]
readme = "README.md"
authors = [
    { name = "Valter Schutz", email = "valterschutz@proton.me" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.0"
]
